# jax-playground

./: .env.example  .pre-commit-config.yaml  DEPENDENCIES.md  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  docker-compose.yml  environment.yml  jax_data_pipelines_advanced.ipynb  jax_learn_basics.ipynb  jax_practice_notebook.ipynb  jax_real_dataset_pipeline.ipynb  jax_transformers_practical.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
jax-playground/: samplers.py
jax-playground/lmc/: discretizations.py
jax-playground/mcmc/: mcmc.py
jax_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
