[tool.poetry]
name = "jax-playground"
version = "0.1.0"
description = "JAX research learning and interview preparation"
authors = ["You <your.email@example.com>"]
readme = "README.md"
packages = [{include = "jax_playground"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
# Core JAX
jax = "^0.4.20"
jaxlib = "^0.4.20"

# Neural Networks & Optimization
flax = "^0.7.0"
optax = "^0.1.5"
equinox = "^0.11.0"

# Probabilistic Programming & Distributions
distrax = "^0.1.5"
tensorflow-probability = "^0.22.0"

# Utilities & Complementary Libraries
numpy = "^1.24.0"
scipy = "^1.11.0"
chex = "^0.1.8"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# Jupyter & Notebooks
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.0"

# Data handling
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.88.0"

# Code Quality
black = "^23.9.0"
ruff = "^0.11.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pylint = "^2.17.0"

# Pre-commit hooks
pre-commit = "^3.4.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

# Development utilities
ipdb = "^0.13.13"
rich = "^13.6.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# PyTool Configuration
[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 99
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]